# PyConHK2023-Clean-Architecture

./: .gitignore  .pre-commit-config.yaml  Makefile.template  README.md
artifacts/sentence_bert_onnx_transform/: pyproject.toml  requirements.txt
artifacts/sentence_bert_onnx_transform/src/: sentence_bert_onnx_transform.py
backend/data_embedding_handler/: dockerfile  pyproject.toml  requirements.txt
backend/data_embedding_handler/src/adapters/embed_raw_product_details/: aws_sagemaker.py  onnx.py
backend/data_embedding_handler/src/adapters/fetch_raw_product_details/: postgres.py
backend/data_embedding_handler/src/adapters/upsert_embedded_product_details/: opensearch.py  postgres.py
backend/data_embedding_handler/src/deployments/lambda/: app.py  config.py
backend/data_embedding_handler/src/entities/: __init__.py  embedded_product_details.py  raw_product_details.py
backend/data_embedding_handler/src/usecases/: __init__.py  embed_raw_product_details.py  upsert_embedded_product_details.py
backend/data_ingestion_handler/: pyproject.toml  requirements.txt
backend/data_ingestion_handler/data_ingestion_handler/adapters/upsert_raw_product_details/: aws_sqs.py  postgres.py
backend/data_ingestion_handler/data_ingestion_handler/deployments/lambda/: config.py
backend/data_ingestion_handler/data_ingestion_handler/entities/: raw_product_details.py
backend/data_ingestion_handler/data_ingestion_handler/usecases/: upsert_raw_product_details.py
backend/data_ingestion_handler/src/adapters/upsert_raw_product_details/: aws_sqs.py  postgres.py
backend/data_ingestion_handler/src/deployments/lambda/: app.py  config.py
backend/data_ingestion_handler/src/entities/: __init__.py
backend/data_ingestion_handler/src/usecases/: __init__.py
backend/query_handler/: .flake8  dockerfile.api_server  dockerfile.lambda  pyproject.toml  requirements.api_server.txt  requirements.lambda.txt
backend/query_handler/src/adapters/embed_raw_query_details/: aws_sagemaker.py  onnx.py
backend/query_handler/src/adapters/fetch_raw_product_details/: postgres.py
backend/query_handler/src/adapters/query_similar_product_details/: opensearch.py  postgres.py
backend/query_handler/src/deployments/api_fastapi/: config.py  main.py
backend/query_handler/src/deployments/api_fastapi/routes/: __init__.py
backend/query_handler/src/deployments/api_fastapi/routes/health_status/: __init__.py  api_schema.py  lifespan.py  route.py
backend/query_handler/src/deployments/api_fastapi/routes/similar_products/: api_models.py  api_schema.py  lifespan.py  route.py
backend/query_handler/src/deployments/api_fastapi/utils/: api_response.py  logging.py
backend/query_handler/src/deployments/lambda/: app.py  config.py
backend/query_handler/src/entities/: __init__.py  query_details.py  raw_product_details.py
backend/query_handler/src/usecases/: __init__.py  embed_raw_query_details.py  fetch_raw_product_details.py  query_similar_product_details.py
data/: sampled_valid_images_dedup_tv_audio_camera_df.csv
sagemaker/: dockerfile  endpoint.py  requirements.txt
scripts/: opensearch_create_embedded_products_mapping.json  postgres_create_embedded_products.sql  postgres_create_raw_products.sql
terraform/: apigateway.tf  backend.tf  cloudfront.tf  data.tf  ecr.tf  ecs.tf  eventbridge.tf  lambda.tf  locals.tf  opensearch.tf  outputs.tf  provider.tf  rds.tf  s3.tf  sagemaker.tf  secretsmanager.tf  sqs.tf  terraform.tfvars  variable.tf  (+1 more)
(+28 files in other folders)
