[tool.poetry]
name = "data-embedding-handler"
version = "0.1.0"
description = "Demo handler for embedding data from source to different destinations"
authors = ["alexau <alexuau922@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
onnxruntime = "^1.16.1"
pymysql = "^1.1.0"
opensearch-py = "^2.3.2"
boto3-stubs = { extras = ["secretsmanager", "sagemaker"], version = "^1.28.68" }
boto3 = "^1.28.68"
transformers = { extras = ["onnx"], version = "^4.34.1" }
aws-lambda-powertools = "^2.26.0"
python-dotenv = "^1.0.0"
typing-extensions = "^4.8.0"


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"
pytest = "^7.4.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
