[tool.poetry]
name = "data-ingestion-handler"
version = "0.1.0"
description = ""
authors = ["alexau <alexaupyconhk2023aws@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3-stubs = { extras = ["s3", "sqs"], version = "^1.28.73" }
psycopg-binary = "^3.1.12"
typing-extensions = "^4.8.0"
aws-lambda-powertools = "^2.26.0"
boto3 = "^1.28.73"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
