[tool.poetry]
name = "new-query-handler"
version = "0.1.0"
description = ""
authors = ["alexau <alexaupyconhk2023aws@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
onnxruntime = "^1.16.1"
opensearch-py = "^2.3.2"
boto3-stubs = {extras = ["sagemaker-runtime", "secretsmanager"], version = "^1.28.78"}
boto3 = "^1.28.78"
transformers = {extras = ["onnx"], version = "^4.35.0"}
typing-extensions = "^4.8.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.api_server.dependencies]
fastapi = {extras = ["all"], version = "^0.104.1"}
structlog = "^23.2.0"
uvicorn = {extras = ["all"], version = "^0.24.0"}
uvloop = "^0.19.0"


[tool.poetry.group.lambda.dependencies]
aws-lambda-powertools = "^2.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
